# python-speakeasy2

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  build.py  build_script.py  bump_version.sh  flake.nix  pyproject.toml
.github/: matrix_config.json
.github/workflows/: build.yaml  python.yaml  release.yaml  test.yaml
speakeasy2/: __init__.py  _speakeasy2.c
tests/: test_cluster.py
