[tool.poetry]
name = "speakeasy2"
version = "0.1.3"
description = "SpeakEasy2 community detection algorithm"
authors = ["David R Connell <davidconnell12@gmail.com>"]
license = "GPLv3+"
repository = "https://github.com/SpeakEasy-2/python-speakeasy2"
keywords = ["network", "community detection", "cluster", "graph"]
readme = "README.md"

packages = [{ include = "speakeasy2" }]
exclude = ["vendor"]
include = [
  { path = "vendor/python-igraph/src/_igraph/igraphmodule_api.h", format = "sdist"},
  { path = "vendor/speakeasy2/CMakeLists.txt", format = "sdist"},
  { path = "vendor/speakeasy2/examples/*", format = "sdist"},
  { path = "vendor/speakeasy2/include/*", format = "sdist"},
  { path = "vendor/speakeasy2/src/speakeasy2/*", format = "sdist"},
  { path = "vendor/speakeasy2/vendor/CMakeLists.txt", format = "sdist"},
  { path = "vendor/speakeasy2/vendor/igraph/etc/cmake/*", format = "sdist"},
  { path = "vendor/speakeasy2/vendor/igraph/src/**/*", format = "sdist"},
  { path = "vendor/speakeasy2/vendor/igraph/vendor/**/*", format = "sdist"},
  { path = "vendor/speakeasy2/vendor/igraph/include/*", format = "sdist"},
]

[tool.poetry.dependencies]
python = ">=3.10"
igraph = "^0.11.4"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipython = "^8.22.1"
isort = "^5.13.2"
black = "^24.2.0"
python-lsp-server = "^1.10.0"
pylsp-mypy = "^0.6.8"
python-lsp-ruff = "^2.1.0"
build = "^1.1.1"

[tool.black]
line-length = 79
preview = true

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.pylsp-mypy]
enabled = true
live_mode = false
dmypy = true

[tool.ruff]
line-length = 79
ignore = ["E203", "E731"]
select = ["A", "C", "D", "E", "F", "N", "RET", "SIM"]

[tool.poetry.build]
script = "build_script.py"
generate-setup-file = true

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
